# procstat-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: buffer.rs  container.rs  curses.rs  frame.rs  main.rs  panel.rs  stdout.rs  util.rs  window.rs
