[package]
name = "procstat-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
libc = "0.2.139"
log = "0.4.17"
simplelog = "0.12.0"
dirs = "4.0.0"
term_size = "0.3.2"
rand = "0.8.5"
lazy_static = "1.4.0"
ncurses = "5.101.0"
inotify = "0.10.2"

[features]
curses = []
stdout = []
